--- a/Seashore/Seashore.xcodeproj/xcshareddata/xcschemes/Seashore Disk Image.xcscheme
+++ b/Seashore/Seashore.xcodeproj/xcshareddata/xcschemes/Seashore Disk Image.xcscheme
@@ -3,9 +3,65 @@
    LastUpgradeVersion = "1010"
    version = "1.3">
    <BuildAction
-      parallelizeBuildables = "YES"
-      buildImplicitDependencies = "YES">
+      parallelizeBuildables = "NO"
+      buildImplicitDependencies = "NO">
       <BuildActionEntries>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "2B1F683321D6F43800D6F371"
+               BuildableName = "Plugins.framework"
+               BlueprintName = "Plugins"
+               ReferencedContainer = "container:../Plugins/Plugins.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "A8A7BDC907C1E06C006AB467"
+               BuildableName = "GIMPCore.framework"
+               BlueprintName = "GIMPCore"
+               ReferencedContainer = "container:../GIMPCore/GIMPCore.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "NO"
+            buildForRunning = "YES"
+            buildForProfiling = "NO"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "A8F100CB09C126A6003F15A3"
+               BuildableName = "Pat2PNG.app"
+               BlueprintName = "Pat2PNG"
+               ReferencedContainer = "container:../Pat2PNG/Pat2PNG.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "NO"
+            buildForRunning = "YES"
+            buildForProfiling = "NO"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "A898E52509BEFCA00075C7AB"
+               BuildableName = "Brushed.app"
+               BlueprintName = "Brushed"
+               ReferencedContainer = "container:../Brushed/Brushed.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
          <BuildActionEntry
             buildForTesting = "NO"
             buildForRunning = "YES"
@@ -29,6 +85,15 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
       </Testables>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "A89B83C60A426D3B00AD6941"
+            BuildableName = "Seashore Disk Image"
+            BlueprintName = "Seashore Disk Image"
+            ReferencedContainer = "container:Seashore.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
@@ -63,10 +128,10 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "A89B83C60A426D3B00AD6941"
-            BuildableName = "Seashore Disk Image"
-            BlueprintName = "Seashore Disk Image"
-            ReferencedContainer = "container:Seashore.xcodeproj">
+            BlueprintIdentifier = "A8A7BDC907C1E06C006AB467"
+            BuildableName = "GIMPCore.framework"
+            BlueprintName = "GIMPCore"
+            ReferencedContainer = "container:../GIMPCore/GIMPCore.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
@@ -74,7 +139,7 @@
       buildConfiguration = "Debug">
    </AnalyzeAction>
    <ArchiveAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Release"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
