issue #36, remove GIMP, use CoreGraphics

--- a/Seashore/Info.plist
+++ b/Seashore/Info.plist
@@ -343,7 +343,7 @@
 	<key>CFBundleSignature</key>
 	<string>SeSh</string>
 	<key>CFBundleVersion</key>
-	<string>201901150</string>
+	<string>debug</string>
 	<key>LSApplicationCategoryType</key>
 	<string>public.app-category.graphics-design</string>
 	<key>LSMinimumSystemVersion</key>
