--- a/Seashore/Info.plist
+++ b/Seashore/Info.plist
@@ -343,7 +343,7 @@
 	<key>CFBundleSignature</key>
 	<string>SeSh</string>
 	<key>CFBundleVersion</key>
-	<string>beta</string>
+	<string>201902010</string>
 	<key>LSApplicationCategoryType</key>
 	<string>public.app-category.graphics-design</string>
 	<key>LSMinimumSystemVersion</key>
