fix bug #89 - ability to read latest gimp files, share code between main and plugins for easier long-term maintenance fix UTI registry for spotlight plugin so it works

--- a/XCFSpotlight/Info.plist
+++ b/XCFSpotlight/Info.plist
@@ -11,7 +11,7 @@
 			<string>MDImporter</string>
 			<key>LSItemContentTypes</key>
 			<array>
-				<string>app.seashore.xcf</string>
+				<string>org.gimp.xcf</string>
 			</array>
 		</dict>
 	</array>
