--- a/Seashore.xcconfig
+++ b/Seashore.xcconfig
@@ -8,3 +8,8 @@
 // Configuration settings file format documentation can be found at:
 // https://help.apple.com/xcode/#/dev745c5c974
 MACOSX_DEPLOYMENT_TARGET = 10.7
+GCC_GENERATE_DEBUGGING_SYMBOLS = YES
+//GCC_DEBUGGING_SYMBOLS=full,
+DEBUG_INFORMATION_FORMAT=dwarf-with-dsym
+//COPY_PHASE_STRIP = YES,
+//DWARF_DSYM_FILE_SHOULD_ACCOMPANY_PRODUCT=YES
