--- a/Seashore/Info.plist
+++ b/Seashore/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
-	<string>English</string>
+	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
 	<string></string>
 	<key>CFBundleDocumentTypes</key>
@@ -371,13 +371,13 @@
 				<string>public.heic</string>
 			</array>
 			<key>LSTypeIsPackage</key>
-			<integer>0</integer>
+			<false/>
 			<key>NSDocumentClass</key>
 			<string>SeaDocument</string>
 		</dict>
 	</array>
 	<key>CFBundleExecutable</key>
-	<string>Seashore</string>
+	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIconFile</key>
 	<string>Main Icon.icns</string>
 	<key>CFBundleIdentifier</key>
@@ -439,7 +439,9 @@ GNU General Public License v2.0</string>
 			<key>UTTypeTagSpecification</key>
 			<dict>
 				<key>com.apple.ostype</key>
-				<string>XCF</string>
+				<array>
+					<string>XCF </string>
+				</array>
 				<key>public.filename-extension</key>
 				<array>
 					<string>xcf</string>
