allow compiling with Xcode 12.3 for OSX 10.7

--- a/Seashore.xcconfig
+++ b/Seashore.xcconfig
@@ -13,3 +13,4 @@ GCC_GENERATE_DEBUGGING_SYMBOLS = YES
 DEBUG_INFORMATION_FORMAT=dwarf-with-dsym
 //COPY_PHASE_STRIP = YES,
 //DWARF_DSYM_FILE_SHOULD_ACCOMPANY_PRODUCT=YES
+SDKROOT=macosx10.15
