--- a/Seashore.xcconfig
+++ b/Seashore.xcconfig
@@ -7,10 +7,12 @@
 
 // Configuration settings file format documentation can be found at:
 // https://help.apple.com/xcode/#/dev745c5c974
+// latest XCode 12.4 only supports OSX 10.9+ so you need to change the target, or install older SDKs
 MACOSX_DEPLOYMENT_TARGET = 10.7
 GCC_GENERATE_DEBUGGING_SYMBOLS = YES
 //GCC_DEBUGGING_SYMBOLS=full,
 DEBUG_INFORMATION_FORMAT=dwarf-with-dsym
 //COPY_PHASE_STRIP = YES,
 //DWARF_DSYM_FILE_SHOULD_ACCOMPANY_PRODUCT=YES
+// You need to install older SDK's to build for OSX < 10.9. Comment out the following line if building for 10.9+
 SDKROOT=macosx10.15
