--- a/Seashore/Seashore.xcodeproj/xcshareddata/xcschemes/SeashoreTests.xcscheme
+++ b/Seashore/Seashore.xcodeproj/xcshareddata/xcschemes/SeashoreTests.xcscheme
@@ -5,6 +5,22 @@
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
+      <BuildActionEntries>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "NO"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "2B670BDB27DD0195003BA6AE"
+               BuildableName = "SeaLibrary.framework"
+               BlueprintName = "SeaLibrary"
+               ReferencedContainer = "container:../SeaLibrary/SeaLibrary.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+      </BuildActionEntries>
    </BuildAction>
    <TestAction
       buildConfiguration = "Debug"
