--- a/SeaMinimal/SeaMinimal.xcodeproj/xcshareddata/xcschemes/SeaMinimal.xcscheme
+++ b/SeaMinimal/SeaMinimal.xcodeproj/xcshareddata/xcschemes/SeaMinimal.xcscheme
@@ -14,7 +14,21 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "2B43BF5727DD1D670094F84E"
+               BlueprintIdentifier = "2B2EFA6F28BF1AD3009B225D"
+               BuildableName = "SeaLibrary.framework"
+               BlueprintName = "SeaLibrary"
+               ReferencedContainer = "container:../SeaLibrary/SeaLibrary.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "2B2EFA9328BF1E67009B225D"
                BuildableName = "SeaMinimal.framework"
                BlueprintName = "SeaMinimal"
                ReferencedContainer = "container:SeaMinimal.xcodeproj">
@@ -50,7 +64,7 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "2B43BF5727DD1D670094F84E"
+            BlueprintIdentifier = "2B2EFA9328BF1E67009B225D"
             BuildableName = "SeaMinimal.framework"
             BlueprintName = "SeaMinimal"
             ReferencedContainer = "container:SeaMinimal.xcodeproj">
