--- a/Seashore.xcconfig
+++ b/Seashore.xcconfig
@@ -11,19 +11,21 @@
 
 MACOSX_DEPLOYMENT_TARGET = 10.9
 GCC_GENERATE_DEBUGGING_SYMBOLS = YES
-//GCC_DEBUGGING_SYMBOLS=full,
+GCC_DEBUGGING_SYMBOLS=full
 DEBUG_INFORMATION_FORMAT=dwarf-with-dsym
 OTHER_CFLAGS=-Werror=partial-availability -Werror=protocol
-MARKETING_VERSION=3.16
-CURRENT_PROJECT_VERSION=2022122201
-GCC_OPTIMIZATION_LEVEL = $(GCC_OPTIMIZATION_LEVEL_$(CONFIGURATION));
-GCC_OPTIMIZATION_LEVEL_Release = s;
-GCC_OPTIMIZATION_LEVEL_Debug = 0;
-GCC_PREPROCESSOR_DEFINITIONS = $(GCC_PREPROCESSOR_DEFINITIONS_$(CONFIGURATION));
-GCC_PREPROCESSOR_DEFINITIONS_Debug=DEBUG=1 $(inherited);
-GCC_PREPROCESSOR_DEFINITIONS_Release=$(inherited);
-ONLY_ACTIVE_ARCH = $(ONLY_ACTIVE_ARCH_$(CONFIGURATION));
-ONLY_ACTIVE_ARCH_Debug=YES
-ONLY_ACTIVE_ARCH_Release=NO
+MARKETING_VERSION=3.17
+CURRENT_PROJECT_VERSION=2022122507
+GCC_OPTIMIZATION_LEVEL[config=Release] = s;
+GCC_OPTIMIZATION_LEVEL[config=Debug] = 0;
+GCC_PREPROCESSOR_DEFINITIONS[config=Debug]=DEBUG=1 $(inherited);
+GCC_PREPROCESSOR_DEFINITIONS[config=Release]=$(inherited);
+ONLY_ACTIVE_ARCH[config=Debug]=YES
+ONLY_ACTIVE_ARCH[config=Release]=NO
 CLANG_ENABLE_OBJC_ARC=YES
 COPY_PHASE_STRIP=NO
+WARNING_CFLAGS=-Wmost -Wno-four-char-constants -Wno-unknown-pragmas
+CODE_SIGN_STYLE = Automatic;
+DEVELOPMENT_TEAM = 8Q9M9WAC2F;
+LD_RUNPATH_SEARCH_PATHS = $(inherited) @executable_path/../Frameworks;
+DYLIB_INSTALL_NAME_BASE = @rpath;
