--- a/Seashore.xcconfig
+++ b/Seashore.xcconfig
@@ -16,19 +16,19 @@ DEBUG_INFORMATION_FORMAT=dwarf-with-dsym
 OTHER_CFLAGS=-Werror=partial-availability -Werror=protocol
 MARKETING_VERSION=3.28
 CURRENT_PROJECT_VERSION=2023052901
-GCC_OPTIMIZATION_LEVEL_Release=3;
-GCC_OPTIMIZATION_LEVEL_Debug=0;
+GCC_OPTIMIZATION_LEVEL_Release=3
+GCC_OPTIMIZATION_LEVEL_Debug=0
 GCC_OPTIMIZATION_LEVEL= $(GCC_OPTIMIZATION_LEVEL_$(CONFIGURATION))
-GCC_PREPROCESSOR_DEFINITIONS_Debug=DEBUG=1 $(inherited);
-GCC_PREPROCESSOR_DEFINITIONS_Release=$(inherited);
+GCC_PREPROCESSOR_DEFINITIONS_Debug=DEBUG=1 $(inherited)
+GCC_PREPROCESSOR_DEFINITIONS_Release=$(inherited)
 GCC_PREPROCESSOR_DEFINITIONS=$(GCC_PREPROCESSOR_DEFINITIONS_$(CONFIGURATION))
 ONLY_ACTIVE_ARCH_Debug=YES
 ONLY_ACTIVE_ARCH_Release=NO
-ONLY_ACTIVE_ARCH_Release=$(ONLY_ACTIVE_ARCH_$(CONFIGURATION))
+ONLY_ACTIVE_ARCH=$(ONLY_ACTIVE_ARCH_$(CONFIGURATION))
 CLANG_ENABLE_OBJC_ARC=YES
 COPY_PHASE_STRIP=NO
 WARNING_CFLAGS=-Wmost -Wno-four-char-constants -Wno-unknown-pragmas
-CODE_SIGN_STYLE=Automatic;
-DEVELOPMENT_TEAM=8Q9M9WAC2F;
-LD_RUNPATH_SEARCH_PATHS = $(inherited) @executable_path/../Frameworks;
-DYLIB_INSTALL_NAME_BASE = @rpath;
+CODE_SIGN_STYLE=Automatic
+DEVELOPMENT_TEAM=8Q9M9WAC2F
+LD_RUNPATH_SEARCH_PATHS = $(inherited) @executable_path/../Frameworks
+DYLIB_INSTALL_NAME_BASE = @rpath
