--- a/Seashore.xcconfig
+++ b/Seashore.xcconfig
@@ -14,8 +14,8 @@ GCC_GENERATE_DEBUGGING_SYMBOLS = YES
 GCC_DEBUGGING_SYMBOLS=full
 DEBUG_INFORMATION_FORMAT=dwarf-with-dsym
 OTHER_CFLAGS=-Werror=partial-availability -Werror=protocol
-MARKETING_VERSION=3.37
-CURRENT_PROJECT_VERSION=2024062001
+MARKETING_VERSION=3.38
+CURRENT_PROJECT_VERSION=2024110901
 GCC_OPTIMIZATION_LEVEL_Release=3
 GCC_OPTIMIZATION_LEVEL_Debug=0
 GCC_OPTIMIZATION_LEVEL= $(GCC_OPTIMIZATION_LEVEL_$(CONFIGURATION))
@@ -32,3 +32,6 @@ CODE_SIGN_STYLE=Automatic
 DEVELOPMENT_TEAM=8Q9M9WAC2F
 LD_RUNPATH_SEARCH_PATHS = $(inherited) @executable_path/../Frameworks
 DYLIB_INSTALL_NAME_BASE = @rpath
+VALID_ARCHS = arm64 x86_64
+ARCHS = arm64 x86_64
+//SDKROOT = macosx12.3
